buildscript fixes