@@ -1,3 +1,7 @@
+plugins {
+    id("java-library")
+}
+
 group = "io.github.archivedev.lum"
 
 repositories {
@@ -15,6 +19,31 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter")
 }
 
+java {
+    sourceCompatibility = JavaVersion.VERSION_24
+    targetCompatibility = JavaVersion.VERSION_24
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(24))
+    }
+
+    withJavadocJar()
+    withSourcesJar()
+}
+
+tasks.javadoc {
+    (options as CoreJavadocOptions).addStringOption("source", "24")
+    (options as CoreJavadocOptions).addBooleanOption("-enable-preview", true)
+}
+
+val mockitoAgent = configurations.create("mockitoAgent")
+dependencies {
+    testImplementation("org.mockito:mockito-core:5.14.2")
+    mockitoAgent("org.mockito:mockito-core:5.14.2") { isTransitive = false }
+}
+
 tasks.test {
     useJUnitPlatform()
+    options {
+        jvmArgs("--enable-preview", "-javaagent:${mockitoAgent.asPath}")
+    }
 }
